--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,16 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  page_view_indicators: 1.3.1
+  smooth_page_indicator: ^0.2.0
 
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
