--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,18 @@ description: Flutter Walkthrough Starter Kit
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.13.1 <3.0.0"
+  sdk: ">=2.14.4 <3.0.0"
 
 dependencies:
-  smooth_page_indicator: ^0.3.0-nullsafety.0
+  smooth_page_indicator: ^1.0.0+2
 
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.3
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.9.0
+  flutter_launcher_icons: ^0.9.2
+  flutter_lints: ^1.0.4
 
 flutter_icons:
   android: false
